--- a/IdolStack/frontend/package.json
+++ b/IdolStack/frontend/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^3.4.0",
     "react-router-dom": "^6.22.3"
   }
 }
